# ROS-NMMI

nmmi_GenericTwoMotors/: LICENSE
nmmi_GenericTwoMotors/GenericTwoMotors/: CMakeLists.txt  package.xml
nmmi_GenericTwoMotors/GenericTwoMotors_control/: CMakeLists.txt  package.xml
nmmi_GenericTwoMotors/GenericTwoMotors_description/: CMakeLists.txt  package.xml
nmmi_GenericTwoMotors/GenericTwoMotors_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
nmmi_bringup/launch/: device_bringup.launch  device_controllers_bringup.launch  robot_bringup.launch
nmmi_driver/src/: nmmi_communication_handler.cpp
nmmi_examples/launch/: generic_board_single.launch
nmmi_examples/nmmi_chains_examples/: CMakeLists.txt  LICENSE
nmmi_examples/nmmi_chains_examples/nmmi_chain_control/: CMakeLists.txt  package.xml
nmmi_examples/nmmi_chains_examples/nmmi_chain_control/launch/: GenericTwoMotors_qbhand_chain.launch  qbmove_qbhand_chain.launch
nmmi_examples/nmmi_chains_examples/nmmi_chain_description/: CMakeLists.txt  package.wiki  package.xml
nmmi_examples/nmmi_chains_examples/nmmi_chain_description/rviz/: GenericTwoMotors_qbhand_chain.rviz  qbmove_qbhand_chain.rviz
nmmi_examples/nmmi_chains_examples/nmmi_chain_description/urdf/: GenericTwoMotors_qbhand_chain.urdf.xacro  qbmove_qbhand_chain.urdf.xacro
nmmi_examples/nmmi_single_devices_examples/: CMakeLists.txt  package.xml
nmmi_examples/nmmi_single_devices_examples/launch/: GenericTwoMotors.launch  generic_board_single.launch
nmmi_srvs/: CMakeLists.txt
nmmi_srvs/srv/: GetControlMode.srv  GetEncoderMap.srv  GetEncoderRawValues.srv
(+20 files in other folders)
